--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@
     justify-content: flex-end;
     align-items: center;
     height: 808px;
-    
-
+    margin-bottom: 100px;
 }
 .top{
    text-align: right;
@@ -41,16 +40,22 @@
      align-items:center;  
      justify-content: space-evenly;
      width: 70%; 
-     margin: 0 auto;
+     margin:0 auto;
 }
 .details{
     width:300px;
     margin-left: auto;
 }
+.title{
+    font-size: 25px;
+}
 h4{
-    
+font-size: 20px;   
 }
 .blog{
+    margin-top: 100px;
+}
+.knowledge{
     display:flex;
     justify-content: space-evenly;
     
@@ -64,23 +69,21 @@ h1{
     text-align: center;
 }
 .gradient{
-    background-image:url(image/watch.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-image: linear-gradient( 135deg, #F15B22 #f15b20 );
+    background-image:url('image/watch.png');
     height: 300px;
-    width: 1180px;
-    
-    margin-top:80px;
-    margin-bottom: 80px;
+    margin: 100px auto;
+    width: 70%;
+    justify-content: center;
+    align-items: center;
     
 }
-.call-btn{
+
+button{
     border-style: none;
     padding: 7px 9px;
     border-radius: 6px;
     color: #F15B22;
-    margin-left: 50px;
+   
     
 }
 .bottom{
@@ -90,10 +93,17 @@ h1{
     background-color:black;
     height: 550px;    
 }
+.media{
+    margin-top: ;
+}
 .left-side{
  width: 300px;   
  color: white;
 }
 .right-side{
     color: white;
+}
+.last-btn{
+    margin-top: 5px;
+    display: block;
 }
